@@ -1,4 +1,5 @@
 0.0.4
+Right clicking icon with icons already selected now works as expected.
 Properties dialog now sets as well as read file props.
 Added file properties.
 Sped up loading of icons in folder with large number of entries, eg '/usr/bin'.
